# CultureFlow

./: .env  README.md  app.py  home.py  pyproject.toml  requirements.txt  test.py  visualize.py
.streamlit/: config.toml
dataset/: Contact_info.txt  dummy_test2.txt  dummy_text.txt
nlp_task/: about_app.py  chatBot.py  contact_info_extraction.py  context_indentify.py  language_detection_translation.py  recommendation.py  sentiment_analysis.py  summarizer.py
