[tool.poetry]
name = "cultureflow"
version = "0.1.0"
description = ""
authors = ["Siddhant <siddhanthota22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.22.0"
streamlit-option-menu = "^0.3.2"
streamlit-chat = "^0.0.2.2"
openai = "^0.27.6"
langchain = "^0.0.170"
python-dotenv = "^1.0.0"
spacy = "^3.5.3"
openpyxl = "^3.1.2"
gensim = "^4.3.1"
spacy-streamlit = "^1.0.6"
matplotlib = "^3.7.1"
google-trans-new = "^1.1.9"
textblob = "^0.17.1"
vadersentiment = "^3.3.2"
wordcloud = "^1.9.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
